--- a/happyhouse_6_02_frontend_서울_6반_배문규_이정훈/search_apt.html
+++ b/happyhouse_6_02_frontend_서울_6반_배문규_이정훈/search_apt.html
@@ -154,7 +154,7 @@
                                     </div>
 
                                     <div class="col-md-2 col-sm-12 p-0 fourth">
-                                        <button type="button" class="btn btn-danger wrn-btn" onclick="location.href='./search_apt.html'">Search</button>
+                                        <button type="button" class="btn btn-danger wrn-btn" onclick="location.href='./search.html'">Search</button>
                                     </div>
 
                                     <div style="position: relative; left: 900px;">
@@ -176,22 +176,6 @@
                     <table border="0">
                         <tr class="line">
                             <td><h1>거래 정보</h1></td>
-                        </tr>
-
-                        <tr>
-                            <td><h3>주택</h3></td>
-                        </tr>
-
-                        <tr class="line">
-                            <td>
-                                거래금액 : 82,200<br/>
-                                전용면적 : 120.965<br/>
-                                거래구분 : 주택 매매<br/>
-                                <p class="small margin-clear"><i class="fa fa-calendar pr-10"></i>2021. 7. 9</p>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td><h3>아파트</h3></td>
                         </tr>
                         <tr>
                             <td><h4>E편한세상</h4></td>
@@ -215,6 +199,15 @@
                             </td>
                         </tr>
 
+                        <tr class="line">
+                            <td>
+                                거래금액 : 51,600<br/>
+                                전용면적 : 84.965<br/>
+                                거래구분 : 아파트 매매<br/>
+                                <p class="small margin-clear"><i class="fa fa-calendar pr-10"></i>2021. 8. 02</p>
+                            </td>
+                        </tr>
+                        
                     </table>
                 </div>
 
