--- a/happyhouse_6_02_frontend_서울_6반_배문규_이정훈/search_apt.html
+++ b/happyhouse_6_02_frontend_서울_6반_배문규_이정훈/search_apt.html
@@ -79,7 +79,7 @@
                         
                         <li class="nav-item vaild log_on"><a class="nav-link px-lg-3 py-3 py-lg-4" id="logout_btn">Logout</a></li>
                         <li class="nav-item vaild log_on"><a class="nav-link px-lg-3 py-3 py-lg-4" data-bs-toggle="modal" data-bs-target="#profile_Modal" >회원정보</a></li>
-                        <li class="nav-item vaild log_on"><a class="nav-link px-lg-3 py-3 py-lg-4" data-bs-toggle="modal" data-bs-target="#area_register_Modal" >관심지역 등록</a></li>
+                        <li class="nav-item vaild log_on"><a class="nav-link px-lg-3 py-3 py-lg-4" href="./favority.html" >관심지역</a></li>
                     </ul>
                 </div>
             </div>
